<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignBottom="@id/word_form"
    android:padding="@dimen/std_margin"
    tools:context="nl.lennartklein.lennartklein_pset2.FillBlanksActivity">

    <TextView
        android:id="@+id/title_fill_blanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/title_fill_blanks" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/words_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:hint="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:text="@string/words_remaining" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/word_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:fontFamily="serif"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/text_margin"
                android:paddingBottom="@dimen/text_margin"
                android:hint="@string/input_hint"
                android:fontFamily="serif"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:layout_weight="100"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_next"
                android:onClick="sendWord"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
